Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3834

Close the client session after sending GOAWAY with errors

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • HTTP/2
    • None

    Description

      According to Section 5.4.1 of RFC7540 , after sending with error codes, a server must close TCP connection. Current ATS only sends GOAWAY but doesn't close client session.

      This behavior can be checked by h2spec with -s 5.4.1 option.

      $ ./h2spec -h <host> -p <port> -s 5.4.1
        5.4. Error Handling
          5.4.1. Connection Error Handling
            × Receives a GOAWAY frame
              - After sending the GOAWAY frame, the endpoint MUST close the TCP connection.
                Expected: Connection close
                  Actual: Error: Connection closed, but did not receive a GOAWAY Frame.
      
      68 tests, 0 passed, 67 skipped, 1 failed
      
      ===============================================================================
      Failed tests
      ===============================================================================
      
        5.4. Error Handling
          5.4.1. Connection Error Handling
            × Receives a GOAWAY frame
              - After sending the GOAWAY frame, the endpoint MUST close the TCP connection.
                Expected: Connection close
                  Actual: Error: Connection closed, but did not receive a GOAWAY Frame.
      

      Attachments

        Issue Links

          Activity

            People

              rokubo Ryo Okubo
              rokubo Ryo Okubo
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: