[TS-3834] Close connection after sending GOAWAY Frame

This closes #291